--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-# 自定义静态资源路径
+# \u81EA\u5B9A\u4E49\u9759\u6001\u8D44\u6E90\u8DEF\u5F84
 #spring.web.resources.static-locations=classpath:/wkj
+spring.thymeleaf.cache=false
+
+server.servlet.context-path=/kuer
+
+# \u56FD\u9645\u5316\u914D\u7F6E\u6587\u4EF6\u771F\u5B9E\u4F4D\u7F6E
+spring.messages.basename=i18n.index
