--- a/springboot-05-web/src/main/resources/application.properties
+++ b/springboot-05-web/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.web.resources.static-locations=classpath:/wkj
 spring.thymeleaf.cache=false
 
-server.servlet.context-path=/kuer
+#server.servlet.context-path=/kuer
 
 # \u56FD\u9645\u5316\u914D\u7F6E\u6587\u4EF6\u771F\u5B9E\u4F4D\u7F6E
 spring.messages.basename=i18n.index
